2003-09-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/gtk-demo/tree_store.rb: Fix handling of block argument for ruby-1.8.
	* sample/gtk-demo/editable_cells.rb: Fix segfault of removing items action.
	
2003-09-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtklabel.c: Add Gtk::Label#markup=. 
	Gtk::Label#text=(str) returns str.
	* src/rbgdkdisplaymanager.c: GTK+-2.2.0 or later only. 

2003-09-03  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* sample/gtk-demo/main.rb (Demo::Main#create_tree): fix handling of
	block argument to work with latest ruby-1.8.

2003-09-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c, rbgtkmessagedialog.c, rbgtkwindow.c, rbgtkimage.c, 
	rbgtkspinbutton.c, rbgtktreemodel.c, rbgtktreeselection.c, rbgtktreeview.c, 
	rbgtktreesortable.c, rbgtkcellrenderer.c, rbgtktoolbar.c, rbgtknotebook.c, 
	rbgtktable.c, rbgtkscrolledwindow.c, rbgtkarrow.c, rbgtkcalendar.c, 
	rbgtkbox.c, rbgtkwidget.c, rbgdkdragcontext.c: Apply enum/flags changes.
	* sample/misc/cursor.rb, rbgtkaccelkey.c: Follow enum/flags changes.
	* src/rbgtktreeiter.c (Init_gtk_treeiter): Define Gtk::TreeIter#[], #[]=.
	* sample/misc/treeview.rb, listview.rb: Use Gtk::TreeIter#[], #[]=.

2003-08-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkiconsize.c: Add Gtk::IconSize.lookup_for_settings.
	* src/rbgdkinput.c: Add "condition" as a block parameter of Gdk::Input.add.
	* src/rbgdkdragcontext.c: Fix wrong parameter of Gdk::DragContext.protocol,
	Gdk::DragContext#find_window.
	* src/rbgdkevent.c: Add some methods.
	* src/rbgdkevent.c, rbgdkdragcontext.c, rbgdkinput.c, rbgtkmain.c, 
	rbgtkaccelgroup.c, rbgtkaccelgroup.c, rbgtkaccelmap.c, rbgtkdrag.c, 
	rbgtkiconsource.c, rbgtkiconset.c, rbgtkiconsize.c, rbgtkbindingset.c, 
	rbgtkstyle.c: Apply enum/flags changes.

2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: remove nasty hack by using Dir.entries.

2003-08-30  Masao Mutoh  <mutoh@highway.ne.jp>
