@@ -4,7 +4,7 @@
   init.c -
 
   $Author: mutoh $
-  $Date: 2003/07/23 15:42:47 $
+  $Date: 2003/09/09 15:17:22 $
 
   Copyright (C) 2002,2003 Ruby-GNOME2 Project Team
   Copyright (C) 1998-2001 Yukihiro Matsumoto,
@@ -48,8 +48,10 @@ void
 Init_gtk2()
 {
 #ifdef G_THREADS_ENABLED
+		  /*
     g_thread_init (NULL);
     gdk_threads_init();
+	 */
 #endif
 #if 0
     rb_protect(&require_minor, Qnil, NULL);
